2006-10-19       Gaius Mulley <gaius@gnu.org>

	* www/index.ms:  updated gm2-harness release to 0.96.
	* gm2/gm2-compiler/SymbolConversion.mod:   Poison must
	  not check for gcc poisoning as it is called after a
	  function has been emitted and potentially poisoned.

2006-10-18       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-config.in:  added.
	* gm2/Make-lang.in:  include gm2/gm2-config.
	* gm2/configure.in:  generate gm2/gm2-config.
	* backed out above changes

2006-10-17       Gaius Mulley <gaius@gnu.org>

	* gm2/aclocal.m4:  added.
	* gm2/configure:  rebuilt.

2006-10-14       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  minor fixes to build manual pages.

2006-10-13       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  call gimplify_function on all
          functions.
	* gm2/Make-lang.in:  added ability to optionally build
	  the ulm libraries which matches gm2-harness-0.94.

2006-10-12       Gaius Mulley <gaius@gnu.org>

	* gm2/patches/gcc/4.1.1/01.gaius_patch_gcc: added.

2006-10-07       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm.2c:  fixed conditional goto expressions.

2006-10-04       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm.2c:  added debugging stub.

2006-10--03       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  fixed BuildEnd
	  to use IsProcedureGccNested in CodeKillLocalVar.
	* gm2/gm2-compiler/M2GCCDeclare.def:
	  export IsProcedureGccNested.
	
2006-10-01       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  modified BuildEnd
	  to taken an extra parameter, nested, and set it
	  accordingly.

2006-09-30       Waldek Hebisch <hebisch@math.uni.wroc.pl>

	* gm2/gccgm2.c: (gccgm2_BuildEndFunctionCode) only
	  call gimplify_function_tree and cgraph_finalize_function
	  if the procedure is not nested.

2006-09-29       Gaius Mulley <gaius@gnu.org>

	* removed execute permissions for source files.
	* gm2/patches/gcc/4.1.0/01.gaius_patch_gcc: improved.
	* gm2/gccgm2.c:  fixed comment.
	