@@ -1,3 +1,9 @@
+2006-10-20       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gccgm2.c:  fixed building of constants strings.
+	  Constants are also placed into the global scope so
+	  that they are not garbage collected.
+
 2006-10-19       Gaius Mulley <gaius@gnu.org>
 
 	* www/index.ms:  updated gm2-harness release to 0.96.
